Fix #2708: Add live streams to comp home page
To verify, the live streams will need to be up. (If they're not,
message Phil Crump (craag on FreeNode IRC).) I've put a screenshot of
how it should look at:

http://users.ecs.soton.ac.uk/hc13g11/srcomp-live-stream-screenshot.jpg

Patch set 2: Fix extra slash in JS import URL, add a "No stream" option.
Patch set 3: Remove extra padding above leader board now BATC logo is
    gone
Patch set 5: rebase again to fix path conflict

--- a/css/comp.css
+++ b/css/comp.css
@@ -1,3 +1,15 @@
+#live-stream-wrapper {
+	text-align: center;
+}
+
+#live-stream-wrapper > * {
+	margin: auto;
+}
+
+#live-stream-controls a.selected {
+	color: black;
+	font-weight: bold;
+}
 
 tbody tr:nth-child(odd) {
 	/* TODO: make darker */
