--- a/css/home_competition.css
+++ b/css/home_competition.css
@@ -92,7 +92,7 @@ div#competition div.info-box span.more-link {
 
 div#competition div#leaderboard-container {
 	float:right;
-	margin-top:70px;
+	margin-top:30px;
 	padding-right:40px;
 	width:300px;
 }
